# spending

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  alembic.ini  mise.toml  pyproject.toml  spending.py
.github/workflows/: docker-publish.yml
configs/: categories.yaml  normalization.yaml
configs/institutions/: venmo.yaml
migrations/: env.py
migrations/versions/: 0215d262c18f_renormalize_merchants_v2.py  22b2e31cb7ab_renormalize_merchants_v3.py  5958b16baf80_renormalize_merchants.py  8dd6f7111d99_initial_schema.py  d7921ed1b928_add_balance_columns_to_imports.py  d7cde46fca22_renormalize_merchants_v4.py
spending/: classifier.py  cli.py  db.py  models.py  types.py
spending/importer/: __init__.py  csv_parser.py  dedup.py  normalize.py  ofx.py
spending/repository/: __init__.py  accounts.py  aggregations.py  categories.py  corrections.py  imports.py  merchants.py  transactions.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_models.py
tests/e2e/: conftest.py  test_import.py  test_merchants.py  test_monthly.py  test_navigation.py  test_transactions.py  test_trends.py
tests/test_importer/: conftest.py  test_csv_parser.py  test_dedup.py  test_normalize.py  test_ofx.py  test_pipeline.py
tests/test_repository/: test_accounts.py  test_aggregations.py  test_categories.py  test_corrections.py  test_imports.py  test_merchants.py  test_transactions.py
tests/test_web/: conftest.py  test_accounts.py  test_detect_account.py  test_import_upload.py
web/: app.py
web/routes/: __init__.py  accounts.py  imports.py  merchants.py  monthly.py  transactions.py  (+1 more)
(+33 files in other folders)
